Fix table header text alignment
[ci skip]

--- a/docs/extra.less
+++ b/docs/extra.less
@@ -247,6 +247,7 @@ table.doxtable th,dl.reflist dt {
 	background:linear-gradient(to bottom,@table-background-color2 0%,@table-background-color1 100%);
 	box-shadow:inset 0 0 32px @table-background-color1;
 	text-shadow:0 -1px 1px darken(@table-background-color1, 15%);
+	text-align:left;
 	color:@table-text-color;
 }
 
